apps/clusterbook/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${CLUSTERBOOK_NAMESPACE:-clusterbook}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
