apps/clusterbook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: clusterbook
  namespace: ${CLUSTERBOOK_NAMESPACE:-clusterbook}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${CLUSTERBOOK_HOSTNAME:-clusterbook}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: clusterbook-http
          port: 8080
